--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Asanti James -->
     <meta charset="UTF-8">
     <title>Accessible Responsive Styling Practice</title>
     <link href="styles.css" rel="stylesheet">
